--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     gap: 10px;
     padding: 10px 0;
-    background: rgba(255, 255, 255, 0.33);
+    background: #ffffff54;
     border: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(7px);
     h4{
