--- a/src/components/Proyects/Proyects.module.scss
+++ b/src/components/Proyects/Proyects.module.scss
@@ -9,10 +9,9 @@ $textColor: #D1D1D1;
 .projectsCont{
     font-family: 'Bai Jamjuree';
     font-style: normal;
-    padding: 20px;
+    padding: 0 20px;
     h3{
-        margin-bottom: 60px;
-        margin-top: -60px;
+        margin-bottom: 160px;
         text-align: center;
         font-size: 2rem;
         text-transform: uppercase;
