--- a/src/components/Chatbot/Chatbot.module.scss
+++ b/src/components/Chatbot/Chatbot.module.scss
@@ -34,12 +34,11 @@
 
 @media screen and (min-width:640px){
     .chatbot{
-        bottom: 180px;
+        top: 0;
     }
 }
 @media screen and (min-width:360px){
     .chatbot{
-        bottom: 200px;
         right: 5%;
         width: 90%;
     }
